--- a/core/uikit/src/main/res/values/colors.xml
+++ b/core/uikit/src/main/res/values/colors.xml
@@ -1,7 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
-    <color name="ic_launcher_background">#FFFFFF</color>
+    <color name="color_primary">@color/color_white</color>
+    <color name="color_primary_variant">@color/color_cultured</color>
+    <color name="color_on_primary">@color/color_jet</color>
+
+    <color name="color_secondary">@color/color_tan</color>
+    <color name="color_secondary_variant">@color/color_light_orange</color>
+    <color name="color_on_secondary">@color/color_white</color>
+
+    <color name="color_error">@color/color_red_ryb</color>
+    <color name="color_on_error">@color/color_white</color>
+
+    <color name="color_surface">@color/color_white</color>
+    <color name="color_on_surface">@color/color_jet</color>
+
+    <color name="color_background">@color/color_cultured</color>
+    <color name="color_on_background">@color/color_jet</color>
 </resources>
