--- a/feature/login/src/main/res/layout/fragment_login.xml
+++ b/feature/login/src/main/res/layout/fragment_login.xml
@@ -19,16 +19,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3" />
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/feature_login__sign_in_with_google"
-        android:textAllCaps="false"
         app:icon="@drawable/googleg_disabled_color_18"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintVertical_bias="0.7"
+        style="?materialButtonOutlinedStyle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
