Added more uikit configureations

--- a/core/uikit/src/main/res/values/shape.xml
+++ b/core/uikit/src/main/res/values/shape.xml
@@ -15,4 +15,9 @@
         <item name="cornerSize">8dp</item>
     </style>
 
+    <style name="ShapeAppearanceOverlay.AppTheme.Round" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+
 </resources>
