--- a/core/uikit/src/main/res/values/widget.xml
+++ b/core/uikit/src/main/res/values/widget.xml
@@ -29,4 +29,10 @@
         <item name="backgroundTint">@color/selector_button_background_tint</item>
     </style>
 
+    <style name="Widget.AppTheme.ShapeableImageView.Round" parent="">
+        <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.AppTheme.Round</item>
+        <item name="tint">?colorSecondary</item>
+        <item name="elevation">@dimen/default_elevation</item>
+    </style>
+
 </resources>
