Added more core uikit configurations

--- a/core/uikit/src/main/res/values/spaces.xml
+++ b/core/uikit/src/main/res/values/spaces.xml
@@ -5,16 +5,19 @@
     <dimen name="space_end_medium">16dp</dimen>
     <dimen name="space_end_pre_large">24dp</dimen>
     <dimen name="space_end_large">40dp</dimen>
+    <dimen name="space_end_huge">60dp</dimen>
 
     <dimen name="space_start_small">4dp</dimen>
     <dimen name="space_start_pre_medium">8dp</dimen>
     <dimen name="space_start_medium">16dp</dimen>
     <dimen name="space_start_pre_large">24dp</dimen>
     <dimen name="space_start_large">40dp</dimen>
+    <dimen name="space_start_huge">60dp</dimen>
 
     <dimen name="space_small">4dp</dimen>
     <dimen name="space_pre_medium">8dp</dimen>
     <dimen name="space_medium">16dp</dimen>
     <dimen name="space_pre_large">24dp</dimen>
     <dimen name="space_large">40dp</dimen>
+    <dimen name="space_huge">60dp</dimen>
 </resources>
