--- a/core/uikit/src/main/res/values/size.xml
+++ b/core/uikit/src/main/res/values/size.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="layout_artist_list_item_icon_size">80dp</dimen>
+    <dimen name="layout_artist_detail_item_icon_size">180dp</dimen>
 </resources>
