Created album list feature logic

--- a/core/uikit/src/main/res/values/size.xml
+++ b/core/uikit/src/main/res/values/size.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="layout_artist_list_item_icon_size">80dp</dimen>
     <dimen name="layout_artist_detail_item_icon_size">180dp</dimen>
+    <dimen name="layout_album_grid_item_icon_size">160dp</dimen>
 </resources>
