--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -24,6 +24,16 @@
     <fragment
         android:id="@+id/artist_detail"
         android:name="com.eshevtsov.android.guitar.assistant.feature.artist.detail.ArtistDetailFragment"
-        tools:layout="@layout/fragment_artist_detail" />
+        tools:layout="@layout/fragment_artist_detail">
+
+        <action
+            android:id="@+id/action_artist_detail_to_album_list"
+            app:destination="@+id/album_list"/>
+    </fragment>
+
+    <fragment
+        android:id="@+id/album_list"
+        android:name="com.eshevtsov.android.guitar.assistant.feature.album.list.AlbumListFragment"
+        tools:layout="@layout/fragment_album_list" />
 
 </navigation>
