--- a/feature/album/src/main/res/layout/fragment_album_detail.xml
+++ b/feature/album/src/main/res/layout/fragment_album_detail.xml
@@ -1,95 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:overScrollMode="never"
-    android:scrollbars="none">
+    android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        app:navigationIcon="@drawable/ic_arrow_back" />
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:fillViewport="true"
+        android:overScrollMode="never"
+        android:scrollbars="none">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:navigationIcon="@drawable/ic_arrow_back"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:title="Meteora" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <FrameLayout
-            android:id="@+id/frameLayout"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="@dimen/space_large"
-            android:background="?colorSurface"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            app:layout_constraintBottom_toBottomOf="@+id/albumCoverImageView" />
+            <FrameLayout
+                android:id="@+id/frameLayout"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginBottom="@dimen/space_large"
+                android:background="?colorSurface"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/albumCoverImageView" />
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/albumCoverImageView"
-            android:layout_width="@dimen/layout_album_detail_item_icon_size"
-            android:layout_height="@dimen/layout_album_detail_item_icon_size"
-            android:layout_marginTop="@dimen/space_medium"
-            app:srcCompat="@drawable/ic_album"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar" />
-
-        <LinearLayout
-            android:id="@+id/subtitleLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingTop="@dimen/space_pre_medium"
-            android:paddingBottom="@dimen/space_medium"
-            app:layout_constraintTop_toBottomOf="@id/albumCoverImageView"
-            app:layout_constraintStart_toStartOf="@id/albumCoverImageView"
-            app:layout_constraintEnd_toEndOf="@id/albumCoverImageView">
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/albumCoverImageView"
+                android:layout_width="@dimen/layout_album_detail_item_icon_size"
+                android:layout_height="@dimen/layout_album_detail_item_icon_size"
+                android:layout_marginTop="@dimen/space_medium"
+                app:srcCompat="@drawable/ic_album"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/albumArtistTextView"
+                android:id="@+id/albumNameTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?textAppearanceSubtitle2"
-                tools:text="Linkin Park" />
+                android:gravity="center_horizontal"
+                android:paddingTop="@dimen/space_pre_medium"
+                android:paddingStart="@dimen/space_start_pre_large"
+                android:paddingEnd="@dimen/space_end_pre_large"
+                android:textAppearance="?textAppearanceHeadline6"
+                app:layout_constraintTop_toBottomOf="@id/albumCoverImageView"
+                app:layout_constraintStart_toStartOf="@id/albumCoverImageView"
+                app:layout_constraintEnd_toEndOf="@id/albumCoverImageView"
+                tools:text="Meteora" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/albumSubtitleDividerTextView"
+            <LinearLayout
+                android:id="@+id/subtitleLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingEnd="@dimen/space_start_small"
-                android:paddingStart="@dimen/space_end_small"
-                android:textAppearance="?textAppearanceSubtitle2"
-                android:text="@string/feature_album__details_subtitle_divider" />
+                android:orientation="horizontal"
+                android:paddingBottom="@dimen/space_medium"
+                app:layout_constraintTop_toBottomOf="@id/albumNameTextView"
+                app:layout_constraintStart_toStartOf="@id/albumNameTextView"
+                app:layout_constraintEnd_toEndOf="@id/albumNameTextView">
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/albumYearTextView"
-                android:layout_width="wrap_content"
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/albumArtistTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?textAppearanceSubtitle2"
+                    tools:text="Linkin Park" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/albumSubtitleDividerTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="@dimen/space_start_small"
+                    android:paddingStart="@dimen/space_end_small"
+                    android:textAppearance="?textAppearanceSubtitle2"
+                    android:text="@string/feature_album__details_subtitle_divider" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/albumYearTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?textAppearanceSubtitle2"
+                    tools:text="2017" />
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/songsRecyclerView"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textAppearance="?textAppearanceSubtitle2"
-                tools:text="2017" />
-        </LinearLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/songsRecyclerView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_medium"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/subtitleLayout"
-            tools:itemCount="3"
-            tools:listitem="@layout/layout_album_song_list_item" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.core.widget.NestedScrollView>
+                android:layout_marginTop="@dimen/space_medium"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/subtitleLayout"
+                tools:itemCount="3"
+                tools:listitem="@layout/layout_album_song_list_item" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+</LinearLayout>
