--- a/feature/album/src/main/res/layout/fragment_album_list.xml
+++ b/feature/album/src/main/res/layout/fragment_album_list.xml
@@ -11,8 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:navigationIcon="@drawable/ic_arrow_back"
-        app:title="@string/feature_album__list_toolbar_title" />
+        app:navigationIcon="@drawable/ic_arrow_back" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/albumsListRecyclerView"
