--- a/feature/artist/src/main/res/layout/fragment_artist_detail.xml
+++ b/feature/artist/src/main/res/layout/fragment_artist_detail.xml
@@ -1,88 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:fillViewport="true"
-    android:overScrollMode="never"
-    android:scrollbars="none">
+    android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        app:navigationIcon="@drawable/ic_arrow_back" />
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:fillViewport="true"
+        android:overScrollMode="never"
+        android:scrollbars="none">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:navigationIcon="@drawable/ic_arrow_back"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:title="Linkin Park" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <FrameLayout
-            android:id="@+id/frameLayout"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/layout_artist_detail_item_icon_size"
-            android:background="?colorSurface"
-            android:paddingTop="@dimen/space_large"
-            android:paddingBottom="@dimen/space_pre_large"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+            <FrameLayout
+                android:id="@+id/frameLayout"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/layout_artist_detail_item_icon_size"
+                android:background="?colorSurface"
+                android:paddingTop="@dimen/space_large"
+                android:paddingBottom="@dimen/space_pre_large"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/artistIconImageView"
-            android:layout_width="@dimen/layout_artist_detail_item_icon_size"
-            android:layout_height="@dimen/layout_artist_detail_item_icon_size"
-            android:layout_marginTop="@dimen/space_large"
-            app:srcCompat="@drawable/ic_artist"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            style="@style/Widget.AppTheme.ShapeableImageView.Round" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/artistIconImageView"
+                android:layout_width="@dimen/layout_artist_detail_item_icon_size"
+                android:layout_height="@dimen/layout_artist_detail_item_icon_size"
+                android:layout_marginTop="@dimen/space_large"
+                app:srcCompat="@drawable/ic_artist"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                style="@style/Widget.AppTheme.ShapeableImageView.Round" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/linksRecyclerView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_large"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/frameLayout"
-            tools:itemCount="3"
-            tools:listitem="@layout/layout_link_list_item" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/artistNameTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:paddingStart="@dimen/space_start_pre_large"
+                android:paddingEnd="@dimen/space_end_pre_large"
+                android:layout_marginTop="@dimen/space_pre_medium"
+                android:textAppearance="?textAppearanceHeadline6"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/artistIconImageView"
+                tools:title="Linkin Park" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/songsButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/space_medium"
-            android:text="@string/feature_artist__detail_all_songs"
-            android:translationZ="@dimen/default_elevation"
-            android:layout_marginStart="@dimen/space_start_large"
-            app:icon="@drawable/ic_song"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            style="?materialButtonOutlinedStyle"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/linksRecyclerView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_large"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/artistNameTextView"
+                tools:itemCount="3"
+                tools:listitem="@layout/layout_link_list_item" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/albumsButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/feature_artist__detail_all_albums"
-            android:translationZ="@dimen/default_elevation"
-            android:layout_marginEnd="@dimen/space_end_large"
-            android:layout_marginBottom="@dimen/space_medium"
-            app:icon="@drawable/ic_album"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            style="?materialButtonOutlinedStyle"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.core.widget.NestedScrollView>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/songsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/space_medium"
+                android:text="@string/feature_artist__detail_all_songs"
+                android:translationZ="@dimen/default_elevation"
+                android:layout_marginStart="@dimen/space_start_large"
+                app:icon="@drawable/ic_song"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                style="?materialButtonOutlinedStyle"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/albumsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/feature_artist__detail_all_albums"
+                android:translationZ="@dimen/default_elevation"
+                android:layout_marginEnd="@dimen/space_end_large"
+                android:layout_marginBottom="@dimen/space_medium"
+                app:icon="@drawable/ic_album"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                style="?materialButtonOutlinedStyle"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+</LinearLayout>
