--- a/feature/artist/src/main/res/layout/layout_link_list_item.xml
+++ b/feature/artist/src/main/res/layout/layout_link_list_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linkRootLayout"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingStart="@dimen/space_start_medium"
@@ -21,8 +21,8 @@
         android:id="@+id/linkTitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/space_start_pre_medium"
+        android:layout_marginStart="@dimen/space_start_medium"
         android:gravity="center_vertical"
-        android:textAppearance="?textAppearanceBody2"
+        android:textAppearance="?textAppearanceSubtitle1"
         tools:text="Facebook" />
 </LinearLayout>
