--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -12,6 +12,11 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
+        android:id="@+id/songs"
+        android:name="com.eshevtsov.android.guitar.assistant.feature.song.list.SongListFragment"
+        tools:layout="@layout/fragment_song_list" />
+
+    <fragment
         android:id="@+id/artists"
         android:name="com.eshevtsov.android.guitar.assistant.feature.artist.list.ArtistListFragment"
         tools:layout="@layout/fragment_artist_list">
