--- a/feature/song/src/main/res/layout/layout_song_list_item.xml
+++ b/feature/song/src/main/res/layout/layout_song_list_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/artistItemRootLayout"
+    android:id="@+id/songItemRootLayout"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,11 +13,10 @@
     android:paddingBottom="@dimen/space_pre_medium">
     
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/artistIconImageView"
-        android:layout_width="@dimen/layout_artist_list_item_icon_size"
-        android:layout_height="@dimen/layout_artist_list_item_icon_size"
-        app:srcCompat="@drawable/ic_artist"
-        style="@style/Widget.AppTheme.ShapeableImageView.Round" />
+        android:id="@+id/songIconImageView"
+        android:layout_width="@dimen/layout_song_list_item_icon_size"
+        android:layout_height="@dimen/layout_song_list_item_icon_size"
+        app:srcCompat="@drawable/ic_song" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -28,18 +27,21 @@
         android:gravity="center_vertical">
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/artistNameTextView"
+            android:id="@+id/songNameTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?textAppearanceSubtitle1"
-            tools:text="Linkin Park" />
+            android:lines="1"
+            android:ellipsize="end"
+            tools:text="Numb" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/artistInformationTextView"
+            android:id="@+id/songArtistTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?textAppearanceBody2"
-            tools:text="7 albums - 13 tracks" />
+            android:lines="1"
+            android:ellipsize="end"
+            tools:text="Linkin Park" />
     </LinearLayout>
-
 </LinearLayout>
