--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -14,7 +14,12 @@
     <fragment
         android:id="@+id/songs"
         android:name="com.eshevtsov.android.guitar.assistant.feature.song.list.SongListFragment"
-        tools:layout="@layout/fragment_song_list" />
+        tools:layout="@layout/fragment_song_list">
+
+        <action
+            android:id="@+id/action_song_list_to_detail"
+            app:destination="@+id/song_detail"/>
+    </fragment>
 
     <fragment
         android:id="@+id/artists"
@@ -39,6 +44,16 @@
     <fragment
         android:id="@+id/album_detail"
         android:name="com.eshevtsov.android.guitar.assistant.feature.album.detail.AlbumDetailFragment"
-        tools:layout="@layout/fragment_album_detail" />
+        tools:layout="@layout/fragment_album_detail">
+
+        <action
+            android:id="@+id/action_album_detail_to_song_detail"
+            app:destination="@+id/song_detail"/>
+    </fragment>
+
+    <fragment
+        android:id="@+id/song_detail"
+        android:name="com.eshevtsov.android.guitar.assistant.feature.song.detail.SongDetailFragment"
+        tools:layout="@layout/fragment_song_detail" />
 
 </navigation>
